# MindMonitorPython

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DOCUMENTATION_UPDATES.md  ENHANCED_FEATURES_v5.md  README.md  analyze_spectrum.py  consciousness_monitor.py  consciousness_monitor_enhanced.py  debug_signal.py  demo_consciousness_data.csv  demo_enhanced_features.py  example_substate_rules.json  final_validation.py  main.py  pyproject.toml  quick_test.py  record_muse_data.py  test_consciousness_data.csv  test_enhanced_features.py  test_enhanced_monitor.py  test_excitement_detection.py  test_flow_detection.py  test_force_output.csv  test_interval_logic.py  test_monitor_output.py  test_refactored_monitor.py  test_sample.csv  test_signal_processing.py  test_therapeutic_patterns.py
.claude-sessions/: 2025-11-28-osc-receiver-db-emission-fix-compressed.md  2025-11-29-delta-dominance-fix-compressed.md  2025-11-29-mcp-custom-state-definitions-compressed.md  2025-11-29-mcp-token-optimization-state-rename-compressed.md  2025-12-05-mcp-rolling-average-compressed.md  2025-12-06-admin-panel.md  2025-12-06-llm-conductor.md  2025-12-06-neural-music-conductor-compressed.md  2025-12-06-tui-chrome-automation-fix.md  2025-12-09-conductor-stale-session-strudel-tab-fix-compressed.md  2025-12-12-remove-hardcoded-states-compressed.md  2025-12-17-background-tasks-research-compressed.md  2025-12-17-conductor-chrome-cdp-connection-pooling-compressed.md  2025-12-19-conductor-logging-stale-session-compressed.md
admin/: app.py
analysis/: analyze_anxiety_datasets.py  analyze_data_ranges.py  (+6 more)
(+90 files in other folders)
