[project]
name = "mindmonitorpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pyqt5>=5.15.11",
    "pytest>=8.4.1",
    "python-osc>=1.9.3",
    "scipy>=1.16.0",
    "setuptools>=80.9.0",
]
